smart room 24 oct

--- a/CatsLoveDogsHateToy_V1/project.properties
+++ b/CatsLoveDogsHateToy_V1/project.properties
@@ -2,3 +2,5 @@ name=CatsLoveDogsHateToy_V1
 #assetOtaDir=assets
 dependencies.HC-SR04=1.0.1
 dependencies.IoTClassroom_CNM=1.0.7
+dependencies.Adafruit_SSD1306=0.0.2
+dependencies.Grove-Ultrasonic-Ranger=1.0.2
